# rocket-led

./: .env.example  .gitignore  Cargo.toml  Rocket.toml  deny.toml  dist-workspace.toml  install-service.sh  rocket-led.service
.github/: copilot-instructions.md
.github/workflows/: build-setup-frontend.yml  ci.yml  release.yml
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/api/: auth.ts  client.ts  index.ts  mappings.ts  presets.ts
frontend/src/lib/components/: ActiveStateCard.tsx  AppHeader.tsx  ColourSwatchList.tsx  Layout.tsx  MappingCard.tsx  MappingForm.tsx  PageHeader.tsx  PatternPreview.tsx  PresetCard.tsx  PresetForm.tsx  PresetFormCard.tsx  mappingFormUtils.ts  presetFormUtils.ts
frontend/src/pages/: Home.tsx  Login.tsx  Mappings.tsx  Presets.tsx
src/: auth.rs  db.rs  led.rs  lib.rs  main.rs  mappings.rs  presets.rs
wix/: main.wxs
